--- a/k8s-installation/vagrant-ansible/ansible/roles/control-plane/tasks/main.yml
+++ b/k8s-installation/vagrant-ansible/ansible/roles/control-plane/tasks/main.yml
@@ -7,10 +7,5 @@
 - name: Install kube-scheduler
   include_tasks: install_scheduler.yml
 
-- name: Configure Kubernetes control plane
-  hosts: masters
-  become: yes
-  roles:
-    - control-plane
-  tasks:
-    - include_tasks: ../roles/common/tasks/install_kubectl.yml
+- name: Install kubectl on master
+  include_tasks: ../roles/common/tasks/install_kubectl.yml
