--- a/k8s-installation/vagrant-ansible/ansible/roles/hardening/tasks/etcd_backup.yml
+++ b/k8s-installation/vagrant-ansible/ansible/roles/hardening/tasks/etcd_backup.yml
@@ -13,9 +13,9 @@
       #!/bin/bash
       ETCDCTL_API=3 {{ etcdctl_binary }} snapshot save {{ etcd_backup_dir }}/etcd-snapshot-$(date +%Y%m%d%H%M%S).db \
         --cacert={{ pki_dir }}/ca.pem \
-        --cert={{ etcd_pem }} \
-        --key={{ etcd_key_pem }} \
-        --endpoints=https://{{ ansible_host }}:2379
+        --cert={{ pki_dir }}/etcd-server.pem \
+        --key={{ pki_dir }}/etcd-server-key.pem \
+        --endpoints=https://{{ kubernetes_public_address }}:2379
     dest: "{{ etcd_backup_script }}"
     owner: root
     group: root
