--- a/k8s-installation/vagrant-ansible/ansible/roles/jumpbox_setup/tasks/main.yml
+++ b/k8s-installation/vagrant-ansible/ansible/roles/jumpbox_setup/tasks/main.yml
@@ -162,7 +162,4 @@
   become: yes
 
 - name: Setup kubectl on jumpbox
-  hosts: jumpboxes
-  become: yes
-  tasks:
-    - include_tasks: ../roles/common/tasks/install_kubectl.yml
+  include_tasks: ../roles/common/tasks/install_kubectl.yml
