--- a/k8s-installation/vagrant-ansible/ansible/roles/bootstrap/tasks/generate_kubeconfigs.yml
+++ b/k8s-installation/vagrant-ansible/ansible/roles/bootstrap/tasks/generate_kubeconfigs.yml
@@ -1,3 +1,12 @@
+- name: Ensure config directory exists
+  ansible.builtin.file:
+    path: "{{ config_dir }}"
+    state: directory
+    owner: root
+    group: root
+    mode: "0755"
+  when: inventory_hostname in groups['masters'] or inventory_hostname in groups['workers'] or inventory_hostname in groups['jumpbox']
+
 - name: Generate admin kubeconfig
   ansible.builtin.template:
     src: admin.kubeconfig.j2
