--- a/k8s-installation/vagrant-ansible/ansible/roles/certificates-generate/tasks/generate_etcd_certs.yml
+++ b/k8s-installation/vagrant-ansible/ansible/roles/certificates-generate/tasks/generate_etcd_certs.yml
@@ -4,3 +4,10 @@
     chdir: "{{ role_path }}/files"
     creates: "{{ role_path }}/files/etcd-server.pem"
   when: not ansible_check_mode
+
+- name: Generate apiserver-etcd-client certificate and key
+  ansible.builtin.shell: "{{ cfssl_binary }} gencert -ca={{ role_path }}/files/ca.pem -ca-key={{ role_path }}/files/ca-key.pem -config={{ ca_config }} -profile={{ ca_profile }} {{ role_path }}/files/apiserver-etcd-client-csr.json | {{ cfssljson_binary }} -bare apiserver-etcd-client"
+  args:
+    chdir: "{{ role_path }}/files"
+    creates: "{{ role_path }}/files/apiserver-etcd-client.pem"
+  when: not ansible_check_mode
