--- a/k8s-installation/vagrant-ansible/ansible/roles/common/tasks/install_kubectl.yml
+++ b/k8s-installation/vagrant-ansible/ansible/roles/common/tasks/install_kubectl.yml
@@ -5,6 +5,4 @@
     mode: "0755"
     owner: root
     group: root
-  when: 
-    - inventory_hostname in groups['masters'] 
-    or inventory_hostname in groups['jumpboxes']
+  when: (inventory_hostname in groups['masters']) or (inventory_hostname in groups['jumpboxes'])
