--- a/k8s-installation/vagrant-ansible/ansible/roles/hardening/handlers/main.yml
+++ b/k8s-installation/vagrant-ansible/ansible/roles/hardening/handlers/main.yml
@@ -1,9 +1,9 @@
 - name: Apply RBAC
   ansible.builtin.command:
-    cmd: "kubectl apply -f {{ rbac_config }}"
+    cmd: "kubectl --kubeconfig={{ config_dir }}/admin.kubeconfig apply -f {{ rbac_config }}"
   changed_when: true
 
 - name: Apply network policy
   ansible.builtin.command:
-    cmd: "kubectl apply -f {{ network_policy }}"
+    cmd: "kubectl --kubeconfig={{ config_dir }}/admin.kubeconfig apply -f {{ network_policy }}"
   changed_when: true
