--- a/k8s-installation/vagrant-ansible/ansible/roles/hardening/tasks/network_policies.yml
+++ b/k8s-installation/vagrant-ansible/ansible/roles/hardening/tasks/network_policies.yml
@@ -10,6 +10,6 @@
 
 - name: Apply network policy
   ansible.builtin.command:
-    cmd: "kubectl apply -f {{ network_policy }}"
+    cmd: "kubectl --kubeconfig={{ config_dir }}/admin.kubeconfig apply -f {{ network_policy }}"
   changed_when: true
   when: inventory_hostname == 'master1'
