--- a/k8s-installation/vagrant-ansible/ansible/roles/networking/handlers/main.yml
+++ b/k8s-installation/vagrant-ansible/ansible/roles/networking/handlers/main.yml
@@ -1,5 +1,5 @@
-- name: Apply CoreDNS
+- name: apply_coredns
   ansible.builtin.command:
-    cmd: "kubectl apply -f {{ coredns_manifest }}"
+    cmd: "kubectl --kubeconfig={{ config_dir }}/admin.kubeconfig apply -f {{ coredns_manifest }}"
   changed_when: true
   when: inventory_hostname == 'master1'
