fix playbook templates

--- a/k8s-installation/vagrant-ansible/ansible/playbooks/cluster.yml
+++ b/k8s-installation/vagrant-ansible/ansible/playbooks/cluster.yml
@@ -33,3 +33,6 @@
 
 - name: Harden cluster
   import_playbook: 11-hardening.yml
+
+- name: Post-setup configuration
+  import_playbook: 12-post-setup.yml
