--- a/k8s-installation/vagrant-ansible/ansible/roles/cni/defaults/main.yml
+++ b/k8s-installation/vagrant-ansible/ansible/roles/cni/defaults/main.yml
@@ -1,3 +1,2 @@
 # Flannel paths
-flannel_manifest_dest: "{{ config_dir }}/kube-flannel.yml"
-kubectl_binary: "{{ kubectl_binary }}"
+cni_manifest: "{{ paths.artifacts.manifests }}/kube-flannel.yml"
