--- a/k8s-installation/vagrant-ansible/ansible/inventory/group_vars/all.yml
+++ b/k8s-installation/vagrant-ansible/ansible/inventory/group_vars/all.yml
@@ -6,50 +6,50 @@ config_dir: "{{ base_dir }}/configs"
 
 # Certificate destination directories
 certificate_dirs:
-  base_path: "/home/vagrant/k8s-project/ansible/roles/certificates-generate/files"
-  kubernetes: "{{ pki_dir }}" # For cluster-wide certs
-  etcd: /etc/etcd # For etcd-specific certs
-  kubelet: "{{ pki_dir }}" # For kubelet certs (in pki_dir)
-  kube_proxy: "{{ pki_dir }}" # For kube-proxy certs
+  kubernetes: "{{ pki_dir }}"
+  etcd: /etc/etcd
+  kubelet: "{{ pki_dir }}"
+  kube_proxy: "{{ pki_dir }}"
 
-# etcd settings for single-node cluster
+# etcd settings
 etcd_data_dir: /var/lib/etcd
-etcd_cert_dir: "{{ certificate_dirs.etcd }}" # Reference the defined directory
+etcd_cert_dir: "{{ certificate_dirs.etcd }}"
 
-# Binary paths (source from synced ansible/roles/*/files/)
-cfssl_binary: /home/vagrant/k8s-project/ansible/roles/certificates-generate/files/cfssl
-cfssljson_binary: /home/vagrant/k8s-project/ansible/roles/certificates-generate/files/cfssljson
-etcd_binary: /home/vagrant/k8s-project/ansible/roles/etcd/files/etcd
-etcdctl_binary: /home/vagrant/k8s-project/ansible/roles/etcd/files/etcdctl
-kube_apiserver_binary: /home/vagrant/k8s-project/ansible/roles/control-plane/files/kube-apiserver
-kube_controller_manager_binary: /home/vagrant/k8s-project/ansible/roles/control-plane/files/kube-controller-manager
-kube_scheduler_binary: /home/vagrant/k8s-project/ansible/roles/control-plane/files/kube-scheduler
-kubelet_binary: /home/vagrant/k8s-project/ansible/roles/kubelet/files/kubelet
-kube_proxy_binary: /home/vagrant/k8s-project/ansible/roles/kube-proxy/files/kube-proxy
-runc_binary: /home/vagrant/k8s-project/ansible/roles/container-runtime/files/runc
-containerd_binary: /home/vagrant/k8s-project/ansible/roles/container-runtime/files/containerd
-kubectl_binary: /home/vagrant/k8s-project/ansible/roles/networking/files/kubectl
-flannel_manifest: /home/vagrant/k8s-project/ansible/roles/cni/files/kube-flannel.yml
+# Binary paths
+etcd_binary: "{{ paths.artifacts.binaries }}/etcd"
+etcdctl_binary: "{{ paths.artifacts.binaries }}/etcdctl"
+kube_apiserver_binary: "{{ paths.artifacts.binaries }}/kube-apiserver"
+kube_controller_manager_binary: "{{ paths.artifacts.binaries }}/kube-controller-manager"
+kube_scheduler_binary: "{{ paths.artifacts.binaries }}/kube-scheduler"
+kubelet_binary: "{{ paths.artifacts.binaries }}/kubelet"
+kube_proxy_binary: "{{ paths.artifacts.binaries }}/kube-proxy"
+runc_binary: "{{ paths.artifacts.binaries }}/runc"
+containerd_binary: "{{ paths.artifacts.binaries }}/containerd"
+kubectl_binary: "{{ paths.artifacts.binaries }}/kubectl"
+flannel_manifest: "{{ paths.artifacts.manifests }}/kube-flannel.yml"
 
 # Kubernetes versions and settings
 kubernetes_version: 1.34.1
 etcd_version: 3.6.0
 containerd_version: 2.0.0
-cfssl_version: 1.6.5
 
 # Kubernetes API server addresses
-kubernetes_public_address: 192.168.56.11 # master1 IP
-kubernetes_internal_address: 10.32.0.1 # Kubernetes internal IP (usually first IP of service CIDR)
+kubernetes_public_address: "{{ network.masters[0].ip }}"
+kubernetes_internal_address: 10.32.0.1
 
 # Network settings
 service_cidr: 10.96.0.0/12
 api_server_port: 6443
-api_server_endpoint: https://192.168.56.11:6443 # Updated to master1
+api_server_endpoint: https://{{ kubernetes_public_address }}:6443
 cluster_name: kubernetes
 
 # System settings
 swap_enabled: false
 ntp_package: chrony
+
+# Certificate settings
+cert_key_size: 2048
+cert_expiry: "8760h"
 
 ssh_public_key_path: /home/vagrant/k8s-project/.vagrant/machines/jumpbox/virtualbox/private_key.pub
 common_firewall_ports:
@@ -60,8 +60,8 @@ common_firewall_ports:
 
 cni_plugin: flannel
 cni_manifest_paths:
-  flannel: "{{ role_path }}/files/flannel.yml"
-  calico: "{{ role_path }}/files/calico.yaml"
+  flannel: "{{ paths.artifacts.manifests }}/kube-flannel.yml"
+  calico: "{{ paths.artifacts.manifests }}/calico.yaml"
 
 cni_configs:
   flannel:
