--- a/k8s-installation/vagrant-ansible/ansible/inventory/group_vars/paths.yml
+++ b/k8s-installation/vagrant-ansible/ansible/inventory/group_vars/paths.yml
@@ -5,3 +5,10 @@ paths:
     certs: "{{ paths.artifacts.base }}/certs"
     kubeconfigs: "{{ paths.artifacts.base }}/kubeconfigs"
     manifests: "{{ paths.artifacts.base }}/manifests"
+  kubernetes:
+    pki_dir: "{{ pki_dir }}"
+    config_dir: "{{ config_dir }}"
+    manifests_dir: "{{ manifests_dir }}"
+  etcd:
+    cert_dir: "{{ certificate_dirs.etcd }}"
+    data_dir: "{{ etcd_data_dir }}"
