update the container-runtime role

--- a/k8s-installation/vagrant-ansible/ansible/playbooks/container-runtime.yml
+++ b/k8s-installation/vagrant-ansible/ansible/playbooks/container-runtime.yml
@@ -1,5 +1,7 @@
-- name: Configure container runtime
+- name: Configure container runtime on masters and workers
   hosts: masters:workers
   become: yes
+  gather_facts: yes
+  tags: container-runtime
   roles:
     - container-runtime
