--- a/k8s-installation/vagrant-ansible/ansible/roles/container-runtime/defaults/main.yml
+++ b/k8s-installation/vagrant-ansible/ansible/roles/container-runtime/defaults/main.yml
@@ -1,8 +1,3 @@
-# Container runtime paths
-containerd_binary_dest: /usr/local/bin/containerd
-runc_binary_dest: /usr/local/bin/runc
-containerd_shim_binary_dest: /usr/local/bin/containerd-shim-runc-v2
-ctr_binary_dest: /usr/local/bin/ctr
-containerd_config: /etc/containerd/config.toml
-containerd_service: /etc/systemd/system/containerd.service
-containerd_package: containerd.io
+containerd_config_dir: /etc/containerd
+cni_bin_dir: /opt/cni/bin
+cni_conf_dir: /etc/cni/net.d
