--- a/k8s-installation/vagrant-ansible/ansible/roles/kubelet/meta/main.yml
+++ b/k8s-installation/vagrant-ansible/ansible/roles/kubelet/meta/main.yml
@@ -1,1 +1,5 @@
-dependencies: []
+dependencies:
+  - role: common
+  - role: distribute-artifacts
+  - role: container-runtime
+  - role: control-plane
