--- a/k8s-installation/vagrant-ansible/ansible/roles/control-plane/defaults/main.yml
+++ b/k8s-installation/vagrant-ansible/ansible/roles/control-plane/defaults/main.yml
@@ -1,10 +1,3 @@
-# Control plane paths
-apiserver_binary_dest: /usr/local/bin/kube-apiserver
-controller_manager_binary_dest: /usr/local/bin/kube-controller-manager
-scheduler_binary_dest: /usr/local/bin/kube-scheduler
-apiserver_service: /etc/systemd/system/kube-apiserver.service
-controller_manager_service: /etc/systemd/system/kube-controller-manager.service
-scheduler_service: /etc/systemd/system/kube-scheduler.service
-encryption_config: "{{ config_dir }}/encryption-config.yaml"
-kubernetes_cert_file: apiserver.pem
-kubernetes_key_file: apiserver-key.pem
+kubernetes_config_dir: "{{ config_dir }}"
+kubernetes_pki_dir: "{{ pki_dir }}"
+etcd_cert_dir: "{{ certificate_dirs.etcd }}"
