--- a/k8s-installation/vagrant-ansible/ansible/roles/kubelet/tasks/main.yml
+++ b/k8s-installation/vagrant-ansible/ansible/roles/kubelet/tasks/main.yml
@@ -1,2 +1,50 @@
-- name: Configure kubelet
-  include_tasks: configure_kubelet.yml
+- name: Ensure Kubernetes config directory exists
+  file:
+    path: "{{ config_dir }}"
+    state: directory
+    owner: root
+    group: root
+    mode: "0755"
+  become: yes
+  when: inventory_hostname in groups['masters'] or inventory_hostname in groups['workers']
+  tags: kubelet
+
+- name: Deploy kubelet config
+  template:
+    src: kubelet-config.yaml.j2
+    dest: "{{ config_dir }}/kubelet-config.yaml"
+    owner: root
+    group: root
+    mode: "0644"
+  become: yes
+  when: inventory_hostname in groups['masters'] or inventory_hostname in groups['workers']
+  notify: Restart kubelet
+  tags: kubelet
+
+- name: Deploy kubelet systemd service
+  template:
+    src: kubelet.service.j2
+    dest: /etc/systemd/system/kubelet.service
+    owner: root
+    group: root
+    mode: "0644"
+  become: yes
+  when: inventory_hostname in groups['masters'] or inventory_hostname in groups['workers']
+  notify: Restart kubelet
+  tags: kubelet
+
+- name: Reload systemd daemon
+  systemd:
+    daemon_reload: yes
+  become: yes
+  when: inventory_hostname in groups['masters'] or inventory_hostname in groups['workers']
+  tags: kubelet
+
+- name: Enable and start kubelet service
+  systemd:
+    name: kubelet
+    state: started
+    enabled: yes
+  become: yes
+  when: inventory_hostname in groups['masters'] or inventory_hostname in groups['workers']
+  tags: kubelet
