--- a/k8s-installation/vagrant-ansible/ansible/roles/kube-proxy/handlers/main.yml
+++ b/k8s-installation/vagrant-ansible/ansible/roles/kube-proxy/handlers/main.yml
@@ -1,4 +1,8 @@
 - name: Restart kube-proxy
   ansible.builtin.systemd:
-    name: kube-proxy
+    name: kube-proxy.service
     state: restarted
+    daemon_reload: yes
+  become: yes
+  when: inventory_hostname in groups['workers']
+  tags: kube-proxy
