--- a/k8s-installation/vagrant-ansible/ansible/roles/bootstrap/meta/main.yml
+++ b/k8s-installation/vagrant-ansible/ansible/roles/bootstrap/meta/main.yml
@@ -1,1 +1,7 @@
-dependencies: []
+dependencies:
+  - control-plane
+galaxy_info:
+  role_name: bootstrap
+  author: David Essien
+  description: Configure bootstrap tokens for Kubernetes cluster nodes
+  license: MIT
