--- a/k8s-installation/vagrant-ansible/ansible/roles/kube-proxy/defaults/main.yml
+++ b/k8s-installation/vagrant-ansible/ansible/roles/kube-proxy/defaults/main.yml
@@ -1,4 +1,5 @@
-# Kube-proxy paths
-kube_proxy_binary_dest: /usr/local/bin/kube-proxy
-kube_proxy_config: "{{ config_dir }}/kube-proxy-config.yaml"
+kube_proxy_config_dir: "{{ config_dir }}"
+kube_proxy_kubeconfig: "{{ kube_proxy_config_dir }}/kube-proxy.kubeconfig"
+kube_proxy_binary: "{{ paths.kubernetes.bin_dir }}/kube-proxy"
 kube_proxy_service: /etc/systemd/system/kube-proxy.service
+kube_proxy_log_level: 2
