--- a/k8s-installation/vagrant-ansible/ansible/roles/cni/handlers/main.yml
+++ b/k8s-installation/vagrant-ansible/ansible/roles/cni/handlers/main.yml
@@ -1,4 +1,7 @@
-- name: Apply CNI
-  ansible.builtin.command:
-    cmd: "kubectl --kubeconfig={{ config_dir }}/admin.kubeconfig apply -f /etc/kubernetes/{{ cni_plugin }}.yml"
-  changed_when: true
+- name: Restart kubelet for CNI
+  ansible.builtin.systemd:
+    name: kubelet
+    state: restarted
+  become: yes
+  when: inventory_hostname in groups['masters']
+  tags: cni
